--- a/index.html
+++ b/index.html
@@ -180,6 +180,134 @@
         </ul>
       </marquee>
     </div>
-    
+    <div class="products">
+      <div class="productsinner">
+        <div class="productshead">
+          <h1>Most popular products</h1>
+          <ul>
+            <span><li>All</li></span>
+            <li>Dresses</li>
+            <li>Tops</li>
+            <li>Outerwears</li>
+            <li>Jackets</li>
+          </ul>
+        </div>
+        <div class="product1">
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+         
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+          <div class="productouter">
+            <img src="./Assets/images/product1.png" alt="">
+            <p>GET 20% OFF</p>
+            <button>QUICK VIEW</button>
+            <div class="producticons">
+              <i class="fa-regular fa-heart pheart"></i>
+              <i class="fa-regular fa-comment pcomment"></i>
+
+            </div>
+            <div class="productdetails">
+              <h3>Cozy Knit Cardigan sweater</h3>
+              <h4>$80</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
