--- a/index.html
+++ b/index.html
@@ -194,28 +194,15 @@
         </div>
         <div class="product1">
           <div class="productouter">
+           <div class="op">
             <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
             <button>QUICK VIEW</button>
+           </div>
+            <p>GET 20% OFF</p>
+            
             <div class="producticons">
               <i class="fa-regular fa-heart pheart"></i>
               <i class="fa-regular fa-comment pcomment"></i>
-
-            </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
-            </div>
-          </div>
-         
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
             </div>
             <div class="productdetails">
               <h3>Cozy Knit Cardigan sweater</h3>
@@ -223,91 +210,139 @@
             </div>
           </div>
           <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
+            <div class="op">
+             <img src="./Assets/images/product2.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Sophisticated Swagger Suit</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product3.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-          </div>
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Classic Denim Skinny Jeans</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product4.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Athletic Mesh Sports Leggings</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product5.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-          </div>
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Vintage Denim Overalls Shorts</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product6.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Satin Wrap Party Blouse</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product7.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-          </div>
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Plaid Wool Winter Coat</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
+           <div class="productouter">
+            <div class="op">
+             <img src="./Assets/images/product8.png" alt="">
+             <button>QUICK VIEW</button>
             </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
-            </div>
-          </div>
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
-            </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
-            </div>
-          </div>
-          <div class="productouter">
-            <img src="./Assets/images/product1.png" alt="">
-            <p>GET 20% OFF</p>
-            <button>QUICK VIEW</button>
-            <div class="producticons">
-              <i class="fa-regular fa-heart pheart"></i>
-              <i class="fa-regular fa-comment pcomment"></i>
-
-            </div>
-            <div class="productdetails">
-              <h3>Cozy Knit Cardigan sweater</h3>
-              <h4>$80</h4>
-            </div>
-          </div>
+             <p>GET 20% OFF</p>
+             <div class="producticons">
+               <i class="fa-regular fa-heart pheart"></i>
+               <i class="fa-regular fa-comment pcomment"></i>
+ 
+             </div>
+             <div class="productdetails">
+               <h3>Water-Resistant Windbreaker Jacket</h3>
+               <h4>$80</h4>
+             </div>
+           </div>
         </div>
       </div>
+    </div>
+    <div class="banner">
+      <div class="bannerleft">
+        <img src="./Assets/images/pairimage1.png" alt="">
+          <div class="leftdetails">
+            <h4>SALE UP TO 50% OFF</h4>
+            <h3>SUMMER</h3>
+            <h1>2023</h1>
+            <button>SHOP NOW</button>
+          </div>
+      </div>
+      <div class="bannerright">
+        <img src="./Assets/images/pairimage2.png" alt="">
+        <div class=" rightdetails">
+          <h4>Sale Up to 50% Off</h4>
+          <h1>New Summer Collection</h1>
+          <button>SHOP NOW</button>
+        </div>
+      </div>
+    </div>
     </div>
   </body>
 </html>
