--- a/index.html
+++ b/index.html
@@ -344,5 +344,249 @@
       </div>
     </div>
     </div>
+    <div class="minimenu">
+      <div class="minimenuinner">
+         <div class="leftmenu">
+        <div class="leftinner">
+          <img src="./Assets/images/leftmenu.jpg" alt="">
+            </div>
+         </div>
+         <div class="rightmenu">
+          <div class="rightmenutop">
+            <p>Users Who Viewed This Also Checked Out These Similar Profiles</p>
+            <img src="./Assets/images/nextarrow.svg" alt="">
+          </div>
+            <div class="menu">
+              <div class="menucard">
+                <div class="menucardimage">
+                  <img src="./Assets/images/menu1.png" alt="">
+                </div>
+                <div class="menucarddetails">
+                  <div class="menucarddetailsleft">
+                    <span><p>up to 79% off</p></span>
+                    <p>Cozy Knit Cardigan Sweater</p>
+                  </div>
+                  <div class="menucarddetailsright">
+                    <p>$80</p>
+                  </div>
+                </div>
+              </div>
+              <div class="menucard">
+                <div class="menucardimage">
+                  <img src="./Assets/images/menu2.png" alt="">
+                </div>
+                <div class="menucarddetails">
+                  <div class="menucarddetailsleft">
+                    <span><p>up to 79% off</p></span>
+                    <p>Sophisticated Swagger Suit</p>
+                  </div>
+                  <div class="menucarddetailsright">
+                    <p>$80</p>
+                  </div>
+                </div>
+              </div>
+              <div class="menucard">
+                <div class="menucardimage">
+                  <img src="./Assets/images/menu3.png" alt="">
+                </div>
+                <div class="menucarddetails">
+                  <div class="menucarddetailsleft">
+                    <span><p>up to 79% off</p></span>
+                    <p>Classic Denim Skinny Jeans</p>
+                  </div>
+                  <div class="menucarddetailsright">
+                    <p>$80</p>
+                  </div>
+                </div>
+              </div>              
+            </div>
+         </div>
+      </div>
+    </div>
+    <div class="greatsavings">
+      <div class="gsinner">
+        <div class="gsleft">
+          <div class="gscart1">
+            <img src="./Assets/images/s1.png" alt="">
+            <div class="gscartdetails">
+              <div class="gscartdetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Cozy Knit Cardigan Sweater</p>
+              </div>
+              <div class="gscartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <div class="gscart1">
+            <img src="./Assets/images/s2.png" alt="">
+            <div class="gscartdetails">
+              <div class="gscartdetailsleft">
+                <span><p>Free delivery</p></span>
+                <p>Sophisticated Swagger Suit</p>
+              </div>
+              <div class="gscartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <div class="gscart1">
+            <img src="./Assets/images/s3.png" alt="">
+            <div class="gscartdetails">
+              <div class="gscartdetailsleft">
+                <span><p >Free delivery</p></span>
+                <p>Classic Denim Skinny Jeans</p>
+              </div>
+              <div class="gscartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <div class="gscart1">
+            <img src="./Assets/images/s4.png" alt="">
+            <div class="gscartdetails">
+              <div class="gscartdetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Athletic Mesh Sports Leggings</p>
+              </div>
+              <div class="gscartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <span><img src="./Assets/images/star.png" alt=""></span>
+          <span><p class="off">50% Sale</p></span>
+        </div>
+        <div class="gsright">
+          <div class="rightinner">
+            <img src="./Assets/images/s0.jpg" alt="">
+          </div>
+          <div class="rightcontent">
+            <h1>Great saving on everyday essentials</h1>
+            <h3>Up to 60% off + up to $107 Cashback</h3>
+            <button>SEE ALL</button>
+            <div class="rightbottom">
+              <p>GREAT SAVINGS</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="destination">
+      <div class="destinationleft">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1005124.7495641434!2d76.84660930130545!3d10.239911340236558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x3b06cee43d812d0d%3A0x8ce12e9dcdaa2a2c!2sSivakasi%2C%20Tamil%20Nadu!3m2!1d9.4532852!2d77.80241699999999!4m5!1s0x3ba859af2f971cb5%3A0x2fc1c81e183ed282!2sCoimbatore%2C%20Tamil%20Nadu!3m2!1d11.0168445!2d76.9558321!5e0!3m2!1sen!2sin!4v1738671661942!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+      </div>
+      <div class="destinationright">
+         <div class="righttitle">
+          <h1>Discovering the Hottest Nearby Destinations in Your Area</h1>
+          <h3>50% Off + Up To $107 CashBACK</h3>   
+         </div> 
+         <div class="slider">
+          <div class="scart1">
+            <img src="./Assets/images/s1.png" alt="">
+            <div class="scartdetails">
+              <div class="scartdetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Cozy Knit Cardigan Sweater</p>
+              </div>
+              <div class="scartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <div class="scart1">
+            <img src="./Assets/images/s2.png" alt="">
+            <div class="scartdetails">
+              <div class="scartdetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Cozy Knit Cardigan Sweater</p>
+              </div>
+              <div class="scartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+          <div class="scart1">
+            <img src="./Assets/images/s3.png" alt="">
+            <div class="scartdetails">
+              <div class="scartdetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Cozy Knit Cardigan Sweater</p>
+              </div>
+              <div class="scartdetailsright">
+                <p>$80</p>
+              </div>
+            </div> 
+          </div>
+         </div>                   
+      </div>
+    </div>
+    <div class="blockbuster">
+      <div class="blockbusterinner">
+        <div class="blockbusterheading">
+          <h2>Blockbuster Deals</h2>
+          <h5>See All Deals ></h5>
+        </div>
+        <div class="blockbustercontent">
+          <div class="contentcart">
+            <div class="contentcartinner">
+              <img src="./Assets/images/shirt1.png" alt="">
+            </div>
+            <div class="contentcarddetails">
+              <div class="contentcarddetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Printed Spread Collar Shirt</p>
+              </div>
+              <div class="contentcarddetailsright">
+                <p>$80</p>
+              </div>
+            </div>
+          </div>
+          <div class="contentcart">
+            <div class="contentcartinner">
+              <img src="./Assets/images/shirt2.png" alt="">
+            </div>
+            <div class="contentcarddetails">
+              <div class="contentcarddetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Printed Spread Collar Shirt</p>
+              </div>
+              <div class="contentcarddetailsright">
+                <p>$80</p>
+              </div>
+            </div>
+          </div>
+          <div class="contentcart">
+            <div class="contentcartinner">
+              <img src="./Assets/images/shirt3.png" alt="">
+            </div>
+            <div class="contentcarddetails">
+              <div class="contentcarddetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Printed Spread Collar Shirt</p>
+              </div>
+              <div class="contentcarddetailsright">
+                <p>$80</p>
+              </div>
+            </div>
+          </div> 
+          <div class="contentcart">
+            <div class="contentcartinner">
+              <img src="./Assets/images/shirt4.png" alt="">
+            </div>
+            <div class="contentcarddetails">
+              <div class="contentcarddetailsleft">
+                <span><p>up to 79% off</p></span>
+                <p>Printed Spread Collar Shirt</p>
+              </div>
+              <div class="contentcarddetailsright">
+                <p>$80</p>
+              </div>
+            </div>
+          </div>             
+        </div>
+      </div>
+    </div>
+    
   </body>
 </html>
