--- a/index.html
+++ b/index.html
@@ -587,6 +587,23 @@
         </div>
       </div>
     </div>
-    
+    <div class="offers">
+      <div class="offersinner">
+        <div class="offersheading">
+          <h2>Featured offer for you</h2>
+          <h5>See All Deals ></h5>
+        </div>
+        <div class="offersimg">
+          <div class="offersimginner">
+            <img src="./Assets/images/feature1.png" alt="">
+          </div>
+          <div class="offersdetails">
+            <h4>20% OFF</h4>
+            <h1>LUXURY BRAS</h1>
+            <button>Collect Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
