--- a/index.html
+++ b/index.html
@@ -593,14 +593,36 @@
           <h2>Featured offer for you</h2>
           <h5>See All Deals ></h5>
         </div>
-        <div class="offersimg">
-          <div class="offersimginner">
-            <img src="./Assets/images/feature1.png" alt="">
+        <div class="offersimgcart">
+          <div class="offersimg">
+            <div class="offersimginner">
+              <img src="./Assets/images/feature1.png" alt="">
+            </div>
+            <div class="offersdetails">
+              <h4>20% OFF</h4>
+              <h1>LUXURY BRAS</h1>
+              <button>Collect Now</button>
+            </div>
           </div>
-          <div class="offersdetails">
-            <h4>20% OFF</h4>
-            <h1>LUXURY BRAS</h1>
-            <button>Collect Now</button>
+          <div class="offersimg">
+            <div class="offersimginner">
+              <img src="./Assets/images/feature2.png" alt="">
+            </div>
+            <div class="offersdetails">
+              <h4>20% OFF</h4>
+              <h1>LUXURY BRAS</h1>
+              <button>Collect Now</button>
+            </div>
+          </div>
+          <div class="offersimg">
+            <div class="offersimginner">
+              <img src="./Assets/images/feature3.png" alt="">
+            </div>
+            <div class="offersdetails">
+              <h4>20% OFF</h4>
+              <h1>LUXURY BRAS</h1>
+              <button>Collect Now</button>
+            </div>
           </div>
         </div>
       </div>
